Prevent squishing the interface too much.

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -105,4 +105,5 @@ input{
 .output-text{
 	white-space: pre-wrap; 
 	overflow-x: auto; 
+	min-width: 658px;
 }
